--- a/cuda/cudawrap/CMakeLists.txt
+++ b/cuda/cudawrap/CMakeLists.txt
@@ -52,6 +52,7 @@ cuRANDWrapper.hh
 cuRANDWrapper_kernel.hh
 CResource.hh
 CBufSpec.hh
+CBufSlice.hh
 )
 
 install(FILES ${hdrs} DESTINATION include)
