clear out old thrustrap- attic to make room for old overcomplicated and buggy ThrustArray ThrustHistogram ThrustIdx

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -142,7 +142,7 @@ set(LIBRARIES
       crypto 
 )
 
-add_executable( ${name} main.cc CUDAInterop.cc) 
+add_executable( ${name} main.cc ) 
 
 target_link_libraries( ${name} ${LIBRARIES} )
 
