resolve crazy materials issue, the material index customization must be done prior to wavelength optical buffer creation in the geocache otherwise get indice mismatch

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -74,6 +74,7 @@ target_link_libraries( ${name} ${LIBRARIES} )
 SET(hdrs 
 uif.h
 ucharfour.h
+charfour.h
 GLMPrint.hpp
 GLMFormat.hpp
 NumpyEvt.hpp
