add TORCH genstep, a more controllable source of photons

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -47,6 +47,7 @@ add_library( ${name}  SHARED
     timeutil.cpp
     Lookup.cpp
     G4StepNPY.cpp
+    TorchStepNPY.cpp
     PhotonsNPY.cpp
     RecordsNPY.cpp
     BoundariesNPY.cpp
@@ -83,6 +84,7 @@ NPY.hpp
 ViewNPY.hpp
 MultiViewNPY.hpp
 G4StepNPY.hpp
+TorchStepNPY.hpp
 PhotonsNPY.hpp
 RecordsNPY.hpp
 BoundariesNPY.hpp
