modernize assimpwrap- removing envvar duplication with GCache in prep for openmeshrap- integration

--- a/graphics/assimpwrap/CMakeLists.txt
+++ b/graphics/assimpwrap/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
-
 set(name AssimpWrap)
 project(${name})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-                      "$ENV{ENV_HOME}/cmake/Modules"
-          ) 
+set(CMAKE_MODULE_PATH 
+    ${CMAKE_MODULE_PATH} 
+    "$ENV{ENV_HOME}/cmake/Modules"
+) 
 
-
+include(EnvBuildOptions)
 set(BUILD_SHARED_LIBS ON)
 
 find_package(Boost REQUIRED)
@@ -16,10 +16,8 @@ find_package(GGeo REQUIRED)
 find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
 
-include(EnvBuildOptions)
-
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/${name}
+    ${CMAKE_CURRENT_SOURCE_DIR}
     ${Boost_INCLUDE_DIRS}  
     ${Assimp_INCLUDE_DIRS}  
     ${GGeo_INCLUDE_DIRS}  
@@ -32,58 +30,41 @@ add_definitions(
 )
 
 add_library(${name} SHARED 
-                AssimpGeometry.cc
-                AssimpCommon.cc
-                AssimpNode.cc
-                AssimpTree.cc
-                AssimpRegistry.cc
-                AssimpGGeo.cc
-                AssimpSelection.cc
+    AssimpGeometry.cc
+    AssimpCommon.cc
+    AssimpNode.cc
+    AssimpTree.cc
+    AssimpRegistry.cc
+    AssimpGGeo.cc
+    AssimpSelection.cc
 )
 
-target_link_libraries(${name}
-                       ${Boost_LIBRARIES} 
-                       ${Assimp_LIBRARIES} 
-                       ${GGeo_LIBRARIES} 
-                       ${NPY_LIBRARIES} 
-                     )
-
-add_executable(${name}Test ${name}Test.cc)
-
-target_link_libraries(${name}Test 
-                       ${name}
-                       ${Boost_LIBRARIES} 
-                       ${Assimp_LIBRARIES} 
-                       ${GGeo_LIBRARIES} 
-                       ssl
-                       crypto 
-                     )
- 
+set(LIBRARIES
+    ${Boost_LIBRARIES} 
+    ${Assimp_LIBRARIES} 
+    ${GGeo_LIBRARIES} 
+    ${NPY_LIBRARIES} 
+    ssl
+    crypto
+)
 
 set(hdrs
-AssimpCommon.hh
-AssimpGGeo.hh
-AssimpGeometry.hh
-AssimpNode.hh
-AssimpRegistry.hh
-AssimpSelection.hh
-AssimpTree.hh
+    AssimpCommon.hh
+    AssimpGGeo.hh
+    AssimpGeometry.hh
+    AssimpNode.hh
+    AssimpRegistry.hh
+    AssimpSelection.hh
+    AssimpTree.hh
 )
 
 
-install(TARGETS ${name}Test DESTINATION bin)
+target_link_libraries(${name} ${LIBRARIES})
+
+install(FILES  ${hdrs} DESTINATION include) 
+
 install(TARGETS ${name} LIBRARY DESTINATION lib)
-install(FILES ${hdrs} DESTINATION include) 
 
-
-#file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*/*.hpp )
-#foreach(abspath ${headers})
-#   string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" hdr "${abspath}")  # remove the SRC prefix 
-#   get_filename_component(hbase ${hdr} NAME) 
-#   get_filename_component(hpath ${hdr} PATH) 
-#   get_filename_component(hfold ${hpath} NAME) 
-#   message( DEBUG " hdr ${hdr} hbase ${hbase} hpath ${hpath} hfold ${hfold}")
-#   install(FILES ${abspath} DESTINATION include/${hfold})
-#endforeach(abspath)
+add_subdirectory(tests)
 
 
