start making openmeshtest- reusable in transition to openmeshrap- for aiming for pre-cache usage at assimpwrap- level

--- a/graphics/openmeshtest/CMakeLists.txt
+++ b/graphics/openmeshtest/CMakeLists.txt
@@ -30,7 +30,10 @@ add_definitions(
    ${Boost_DEFINITIONS}
 )
 
-add_executable( ${name} main.cc ) 
+add_executable( ${name} 
+     main.cc 
+     MWrap.cc
+) 
 
 target_link_libraries( ${name} 
     ${OpenMesh_LIBRARIES}
