add ggeo- dependency to openmeshtest-, move mesh deduping into ggeo- GMeshFixer

--- a/graphics/openmeshtest/CMakeLists.txt
+++ b/graphics/openmeshtest/CMakeLists.txt
@@ -13,6 +13,7 @@ include(EnvBuildOptions)
 find_package(Boost REQUIRED)
 find_package(GLM    REQUIRED)
 find_package(NPY REQUIRED)
+find_package(GGeo REQUIRED)
 find_package(OpenMesh REQUIRED)
 
 include_directories(
@@ -20,6 +21,7 @@ include_directories(
    ${Boost_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS} 
+   ${GGeo_INCLUDE_DIRS} 
    ${OpenMesh_INCLUDE_DIRS} 
 )
 
@@ -27,6 +29,7 @@ add_definitions(
    ${OpenMesh_DEFINITIONS}
    ${GLM_DEFINITIONS}
    ${NPY_DEFINITIONS}
+   ${GGeo_DEFINITIONS}
    ${Boost_DEFINITIONS}
 )
 
@@ -39,6 +42,7 @@ target_link_libraries( ${name}
     ${OpenMesh_LIBRARIES}
     ${GLM_LIBRARIES}
     ${NPY_LIBRARIES}
+    ${GGeo_LIBRARIES}
     ${Boost_LIBRARIES}
 )
 
