OGeo::makeSimplifiedGeometry working out how to use analytic instanced OptiX geometry

--- a/graphics/optixrap/CMakeLists.txt
+++ b/graphics/optixrap/CMakeLists.txt
@@ -113,6 +113,7 @@ optixthrust_add_library( ${name}
        cu/material1_radiance.cu 
        cu/material1_propagate.cu 
        cu/TriangleMesh.cu 
+       cu/sphere.cu 
        cu/generate.cu
 
        OBuf_.cu     
@@ -130,6 +131,7 @@ set(cuptxs
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_material1_propagate.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_TriangleMesh.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_generate.cu.ptx
+    ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_sphere.cu.ptx
 )
 
 set(cuhdrs
