analyticmesh option for investigation, GMesh::makeAnalyticGeometryBuffer, looking for examples of OptiX CSG tree intersection

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -156,4 +156,4 @@ target_link_libraries( ${name} ${LIBRARIES} )
 
 install(TARGETS ${name} DESTINATION bin)
 
-add_subdirectory(tests)
+#add_subdirectory(tests)
