--- a/graphics/ggeoview/tests/CMakeLists.txt
+++ b/graphics/ggeoview/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ foreach(TEST_CC_SRC ${TEST_CC_SRCS})
     get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
     add_executable(${TGT} ${TEST_CC_SRC})
     target_link_libraries(${TGT} 
-               ${LIBRARIES} 
+               ${LIBRARIES} GGeoViewLib
     )
     install(TARGETS ${TGT} DESTINATION bin)
 endforeach()
