move attributed list mechanics from GPropertyLib into GAttrList, beginning to replace overcomplicated GItemIndex

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -81,6 +81,7 @@ add_library(${name} SHARED
                 GTreePresent.cc
                 GBBoxMesh.cc
                 GItemList.cc
+                GAttrList.cc
                 GMeshFixer.cc
                 GPmt.cc
 )
@@ -126,6 +127,7 @@ GTreeCheck.hh
 GTreePresent.hh
 GBBoxMesh.hh
 GItemList.hh
+GAttrList.hh
 GMeshFixer.hh
 GPmt.hh
 )
