GAttrSeq generalize attributed sequence handling to anything fulfilling NSequence protocol and apply to GFlags, which is Index based unlike other GItemList seqs

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -65,6 +65,7 @@ add_library( ${name}  SHARED
     NSensor.cpp
     NSensorList.cpp
     NSlice.cpp
+    NSequence.cpp
     Parameters.cpp
     Report.cpp
     md5digest.cpp
@@ -114,6 +115,7 @@ NCache.hpp
 NSensor.hpp
 NSensorList.hpp
 NSlice.hpp
+NSequence.hpp
 Parameters.hpp
 md5digest.hpp
 )
