rejig analytic geometry buffer mechanics from GPmt into more general composable GParts

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -80,6 +80,7 @@ add_library(${name} SHARED
                 GItemList.cc
                 GAttrSeq.cc
                 GMeshFixer.cc
+                GParts.cc
                 GPmt.cc
                 GTestBox.cc
                 GGeoTest.cc
@@ -125,6 +126,7 @@ GBBoxMesh.hh
 GItemList.hh
 GAttrSeq.hh
 GMeshFixer.hh
+GParts.hh
 GPmt.hh
 GTestBox.hh
 GGeoTest.hh
