move test triangulated and associated analytic geometry creation from GGeoTest into GMaker

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -84,7 +84,7 @@ add_library(${name} SHARED
                 GMeshFixer.cc
                 GParts.cc
                 GPmt.cc
-                GTestShape.cc
+                GMaker.cc
                 GGeoTest.cc
 )
 
@@ -132,7 +132,7 @@ GAttrSeq.hh
 GMeshFixer.hh
 GParts.hh
 GPmt.hh
-GTestShape.hh
+GMaker.hh
 GGeoTest.hh
 )
 
