--- a/optix/cfg4/CMakeLists.txt
+++ b/optix/cfg4/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(Boost REQUIRED)
 find_package(Bregex REQUIRED)
 find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
+find_package(GGeo REQUIRED)
 
 find_package(Geant4 REQUIRED)  
 
@@ -25,6 +26,7 @@ set(INCLUDE_DIRS
    ${Bregex_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
+   ${GGeo_INCLUDE_DIRS}
    ${Geant4_INCLUDE_DIRS}
 )
 
@@ -32,12 +34,14 @@ set(LIBRARIES
    ${Boost_LIBRARIES}
    ${Bregex_LIBRARIES}
    ${NPY_LIBRARIES}
+   ${GGeo_LIBRARIES}
    ${Geant4_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${Boost_DEFINITIONS} 
    ${Bregex_DEFINITIONS} 
+   ${GGeo_DEFINITIONS} 
    ${Geant4_DEFINITIONS}
 )
 
