--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(Boost REQUIRED)
 find_package(Bregex REQUIRED)
 find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
+find_package(Opticks REQUIRED)
 
 
 
@@ -24,17 +25,20 @@ set(INCLUDE_DIRS
    ${Bregex_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
+   ${Opticks_INCLUDE_DIRS}
 )
 
 set(LIBRARIES
    ${Boost_LIBRARIES}
    ${Bregex_LIBRARIES}
    ${NPY_LIBRARIES}
+   ${Opticks_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${Boost_DEFINITIONS} 
    ${Bregex_DEFINITIONS} 
+   ${Opticks_DEFINITIONS} 
 )
 
 include_directories(${INCLUDE_DIRS})   
