create separate OpIndexerApp and arange for pure Thrust indexing without any OpenGL or OptiX involvement used by the standalone indexer app

--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -51,6 +51,7 @@ CUDA_ADD_LIBRARY( ${name}
        TBuf_.cu
        TBufPair_.cu
        TSparse_.cu
+       TUtil_.cu
        OPTIONS -gencode=arch=compute_30,code=sm_30
 )
  
@@ -61,6 +62,7 @@ SET(hdrs
   TBuf.hh
   TBufPair.hh
   TSparse.hh
+  TUtil.hh
   strided_range.h 
   iexpand.h 
 )
