tidy the OpIndexer and use from ggv-/App : now Geant4 cfg4- simulated events can be standalone indexed with opop-index and visualized with ggv

--- a/opticksop/CMakeLists.txt
+++ b/opticksop/CMakeLists.txt
@@ -74,7 +74,7 @@ set(LIBRARIES
 
 
 
-CUDA_ADD_LIBRARY( ${name}
+CUDA_ADD_LIBRARY( ${name} SHARED
     OpIndexerApp.cc
     OpIndexer.cc
     OpIndexer_.cu
