commandeer slice of photon buffer formerly occupied by p.flags.u.z for c4 a uifchar4, interpret that in evt.py using shape changing numpy view and recarray

--- a/opticks/CMakeLists.txt
+++ b/opticks/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(hdrs
     Opticks.hh
     OpticksCfg.hh
     OpticksPhoton.h
+    OpticksFlags.h
 )
 
 install(TARGETS ${name}  DESTINATION lib)
