--- a/opticksop/CMakeLists.txt
+++ b/opticksop/CMakeLists.txt
@@ -78,6 +78,7 @@ CUDA_ADD_LIBRARY( ${name} SHARED
     OpIndexerApp.cc
     OpIndexer.cc
     OpSeeder.cc
+    OpZeroer.cc
     OpIndexer_.cu
 
     OPTIONS -gencode=arch=compute_30,code=sm_30
@@ -89,6 +90,7 @@ target_link_libraries( ${name} ${LIBRARIES} )
 SET(hdrs 
     OpIndexer.hh
     OpSeeder.hh
+    OpZeroer.hh
     OpIndexerApp.hh
 )
 
